--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -103,6 +103,9 @@
 			<build>
 				<resources>
 					<resource>
+						<directory>src/main/resources</directory>
+					</resource>
+					<resource>
 						<directory>src/main/java</directory>
 						<includes>
 							<include>**/*.java</include>
