--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -26,6 +26,20 @@
 		</dependency>
 			
 		<dependency>
+        	<groupId>org.geomajas</groupId>
+        	<artifactId>geomajas-gwt-client</artifactId>
+        	<version>1.10.0-SNAPSHOT</version>
+      	</dependency>
+      	
+   		<dependency>
+       		<groupId>org.geomajas</groupId>
+       		<artifactId>geomajas-gwt-client</artifactId>
+       		<version>1.10.0-SNAPSHOT</version>
+       		<classifier>sources</classifier>
+   		</dependency>
+
+			
+		<dependency>
 			<groupId>org.geomajas.project</groupId>
 			<artifactId>geomajas-project-sld-api</artifactId>
 			<classifier>sources</classifier>
@@ -36,6 +50,12 @@
 			<artifactId>gwt-user</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+	        <groupId>com.smartgwt</groupId>
+	        <artifactId>smartgwt</artifactId>
+	        <version>2.5</version>
+        </dependency>
 
 		<dependency>
 			<groupId>net.sf.gwt-widget</groupId>
