--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -18,7 +18,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geomajas.project</groupId>
-	<artifactId>geomajas-project-sld-editor</artifactId>
+	<artifactId>geomajas-project-sld-editor-webapp</artifactId>
 	<packaging>war</packaging>
 	<name>Geomajas SLD editor</name>
 	<description>Geomajas SLD editor (GWT)</description>
@@ -33,6 +33,32 @@
 			<groupId>org.geomajas.project</groupId>
 			<artifactId>geomajas-project-sld-gwt</artifactId>
 		</dependency>
+		
+		<dependency>
+        	<groupId>org.geomajas</groupId>
+        	<artifactId>geomajas-gwt-client</artifactId>
+        	<version>1.10.0-SNAPSHOT</version>
+      	</dependency>
+      	
+      	<dependency>
+        	<groupId>org.geomajas</groupId>
+        	<artifactId>geomajas-gwt-client</artifactId>
+        	<version>1.10.0-SNAPSHOT</version>
+        	<classifier>sources</classifier>
+      	</dependency>
+
+		<dependency>
+			<groupId>org.geomajas.widget</groupId>
+			<artifactId>geomajas-widget-utility-gwt</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+ 	
+ 		<dependency>
+	      <groupId>org.geomajas.widget</groupId>
+	      <artifactId>geomajas-widget-utility-gwt</artifactId>
+	      <version>1.0.0-SNAPSHOT</version>
+	      <scope>compile</scope>
+    	</dependency>
 
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -46,6 +72,12 @@
 			<version>${gwt-version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+      <dependency>
+        <groupId>com.smartgwt</groupId>
+        <artifactId>smartgwt</artifactId>
+        <version>2.5</version>
+      </dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -112,7 +144,7 @@
 					<disableCastChecking>true</disableCastChecking>
 					<disableClassMetadata>true</disableClassMetadata>
 					<extraJvmArgs>-Xmx1024M -Xss1024k</extraJvmArgs>
-					<module>org.geomajas.sld.editor.GeomajasSldEditor</module>
+					<module>org.geomajas.sld.editor.sldEditor</module>
 					<runTarget>index.html</runTarget>
 					<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
 					<copyWebapp>true</copyWebapp>
