SLD-3  : implement SmartGwt SLD editor (+startup of pure GWT one) : continue implementation, DRAFT commit!
- Split up editor GWT code in pureGwt and SmartGwt module 
- SLD rule widget : do not show group nodes in rule tree
- Start with i18n implementation
- Fix some problems regarding user switch to another SLD without saving the already opened one first.
- Start changing some form item titles (to be continued)

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 		<module>api</module>
 		<module>impl</module>
 		<module>gwt</module>
+		<module>common-gwt</module>
+		<module>editor-pure-gwt</module>
 		<module>editor</module>
 	</modules>
 
