--- a/editor-pure-gwt/pom.xml
+++ b/editor-pure-gwt/pom.xml
@@ -19,6 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geomajas.project</groupId>
 	<artifactId>geomajas-project-sld-editor-pure-gwt</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Geomajas SLD editor (pure GWT)</name>
 	<description>Geomajas SLD editor (pure GWT)</description>
@@ -31,16 +32,15 @@
 
 		<dependency>
 			<groupId>org.geomajas.project</groupId>
-			<artifactId>geomajas-project-sld-gwt</artifactId>
+			<artifactId>geomajas-project-sld-api</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.geomajas.project</groupId>
+			<artifactId>geomajas-project-sld-common-gwt</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	  	
-      	<!-- <dependency>
-        	<groupId>org.geomajas</groupId>
-        	<artifactId>geomajas-gwt-client</artifactId>
-        	<version>1.10.0-SNAPSHOT</version>
-        	<classifier>sources</classifier>
-      	</dependency>
- 	-->
 		
 		<dependency>
 			<groupId>com.google.gwt</groupId>
