--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -19,6 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geomajas.project</groupId>
 	<artifactId>geomajas-project-sld-editor-webapp</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Geomajas SLD editor</name>
 	<description>Geomajas SLD editor (GWT)</description>
@@ -32,6 +33,12 @@
 		<dependency>
 			<groupId>org.geomajas.project</groupId>
 			<artifactId>geomajas-project-sld-gwt</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.geomajas.project</groupId>
+			<artifactId>geomajas-project-sld-common-gwt</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
