--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -22,9 +22,29 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.geomajas.project</groupId>
+			<artifactId>geomajas-project-sld-common-gwt</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.geomajas.project</groupId>
+			<artifactId>geomajas-project-sld-common-gwt</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<classifier>sources</classifier>
+		</dependency>
+
+	
+		<dependency>
+			<groupId>org.geomajas.project</groupId>
 			<artifactId>geomajas-project-sld-api</artifactId>
 		</dependency>
 			
+		<dependency>
+			<groupId>org.geomajas.project</groupId>
+			<artifactId>geomajas-project-sld-api</artifactId>
+			<classifier>sources</classifier>
+		</dependency>
+		
 		<dependency>
         	<groupId>org.geomajas</groupId>
         	<artifactId>geomajas-gwt-client</artifactId>
@@ -38,12 +58,6 @@
        		<classifier>sources</classifier>
    		</dependency>
 
-			
-		<dependency>
-			<groupId>org.geomajas.project</groupId>
-			<artifactId>geomajas-project-sld-api</artifactId>
-			<classifier>sources</classifier>
-		</dependency>
 
 		<dependency>
 			<groupId>com.google.gwt</groupId>
