--- a/api/pom.xml
+++ b/api/pom.xml
@@ -75,6 +75,17 @@
 	</dependencies>
 	
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/config</directory>
+				<includes>
+					<include>StyledLayerDescriptor-geoserver.xsd</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.jibx</groupId>
