--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -122,7 +122,7 @@
 					<webAppConfig>
 						<contextPath>/</contextPath>
 						<baseResource implementation="org.mortbay.resource.ResourceCollection">
-							<!-- need both the webbapp dir and location where GWT puts stuff -->
+							<!-- need both the webapp dir and location where GWT puts stuff -->
 							<resourcesAsCSV>${basedir}/src/main/webapp,${project.build.directory}/${project.build.finalName}</resourcesAsCSV>
 						</baseResource>
 					</webAppConfig>
