GBE-260: upgrade to own geotools version 2.7.4-GBE-260, containing fixes for GEOT-2817 (classloader problem) and GEOT-4000 (configurable resource locator)

--- a/pom.xml
+++ b/pom.xml
@@ -303,8 +303,62 @@
 		<spring-version>3.0.5.RELEASE</spring-version>
 		<slf4j-version>1.6.0</slf4j-version>
 		<jibx-version>1.2.3</jibx-version>
-		<gwt-version>2.1.1</gwt-version>
-		<geotools-version>2.7.1</geotools-version>
+		<gwt-version>2.4.0</gwt-version>
+		<geotools-version>2.7.4-GBE-260</geotools-version>
 	</properties>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											gwt-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.3.0-1,)
+										</versionRange>
+										<goals>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jibx</groupId>
+										<artifactId>
+											maven-jibx-plugin
+										</artifactId>
+										<versionRange>
+											[1.2.3,)
+										</versionRange>
+										<goals>
+											<goal>bind</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
