--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -134,7 +134,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0-1</version>
+				<version>2.4.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>com.google.gwt</groupId>
