--- a/common-gwt/pom.xml
+++ b/common-gwt/pom.xml
@@ -17,7 +17,7 @@
 	<artifactId>geomajas-project-sld-common-gwt</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Geomajas SLD client library</name>
+	<name>Geomajas SLD common GWT</name>
 	<description>Geomajas SLD client library (common GWT)</description>
 
 	<dependencies>
