--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,25 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<geomajas-sld-version>${project.version}</geomajas-sld-version>
+							<license>Apache v2</license>
+							<more-info>http://www.geomajas.org/ and http://www.geosparc.com/</more-info>
+						</manifestEntries>
+						<compress>true</compress>
+						<index>true</index>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
