--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,23 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.jibx</groupId>
+					<artifactId>maven-jibx-plugin</artifactId>
+					<version>1.2.3</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.eclipse.jdt</groupId>
+							<artifactId>core</artifactId>
+							<version>3.1.0</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<repositories>
