--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.geomajas</groupId>
 		<artifactId>geomajas-al-parent</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geomajas.project</groupId>
@@ -30,9 +30,9 @@
 	</description>
 
 	<scm>
-		<connection>scm:svn:https://svn.geomajas.org/majas/trunk/project/geomajas-project-sld</connection>
-		<developerConnection>scm:svn:https://svn.geomajas.org/majas/trunk/project/geomajas-project-sld</developerConnection>
-		<url>http://ci.geomajas.org/svn/repos/Geomajas/list/trunk/project/geomajas-project-sld</url>
+		<connection>scm:git:git@github.com:geomajas/geomajas-project-sld.git</connection>
+		<developerConnection>scm:git:git@github.com:geomajas/geomajas-project-sld.git</developerConnection>
+		<url>https://github.com/geomajas/geomajas-project-sld.git</url>
 	</scm>
 
 	<modules>
