--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.geomajas</groupId>
 		<artifactId>geomajas-al-parent</artifactId>
-		<version>2.5.0</version>
+		<version>2.6.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geomajas.project</groupId>
@@ -52,19 +52,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-        <plugins>
-            <!-- can be removed when PAR-32 is resolved -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <encoding>utf8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
 	</build>
 
 	<dependencyManagement>
@@ -77,6 +64,7 @@
 				<scope>import</scope>
 			</dependency>
 
+            <!-- project dependencies -->
 			<dependency>
 				<groupId>org.geomajas.project</groupId>
 				<artifactId>geomajas-project-sld-api</artifactId>
@@ -100,6 +88,7 @@
 				<classifier>sources</classifier>
 			</dependency>
 
+            <!-- spring dependencies -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -111,6 +100,13 @@
 				<version>${sld-spring-version}</version>
 			</dependency>
 
+            <!-- other dependencies -->
+            <dependency>
+                <groupId>com.google.gwt</groupId>
+                <artifactId>gwt-user</artifactId>
+                <version>${sld-gwt-version}</version>
+                <scope>provided</scope>
+            </dependency>
 			<dependency>
 				<groupId>org.geotools.xsd</groupId>
 				<artifactId>gt-xsd-sld</artifactId>
@@ -135,7 +131,7 @@
 			<dependency>
 				<groupId>xstream</groupId>
 				<artifactId>xstream</artifactId>
-				<version>1.2.2</version>
+				<version>${sld-version-xstream}</version>
 			</dependency>
 
 		</dependencies>
@@ -158,5 +154,6 @@
 		<sld-gwt-version>2.7.0</sld-gwt-version>
 		<sld-geotools-version>13.0</sld-geotools-version>
 		<sld-version-geomajas-api>1.0.0</sld-version-geomajas-api>
+		<sld-version-xstream>1.2.2</sld-version-xstream>
 	</properties>
 </project>
